--- a/public/app/components/shakki/shakki_index.html
+++ b/public/app/components/shakki/shakki_index.html
@@ -5,6 +5,8 @@
     <p>{{game}}</p>
 </div>
 
+<button ng-click="testa()">hei</button>
+
 <div>
     <img src="images/fairy_white/white_mine.png">
 </div>
@@ -12,8 +14,8 @@
 <div style="padding-left: 50px; width:560px; height:560px;">
     <div ng-repeat="row in table">
         <!--<div style="">-->
-            <div ng-repeat="column in row">
-                <square holder="table[$parent.$index][$index].holder" row="$parent.$index" column="$index"></square>
+            <div ng-repeat="column in row" ng-click="activateSquare($parent.$index, $index)">
+                <square data="table[$parent.$index][$index]" row="$parent.$index" column="$index"></square>
             </div>
         <!--</div>-->
     </div>
