--- a/public/app/components/shakki/shakki_css.css
+++ b/public/app/components/shakki/shakki_css.css
@@ -7,8 +7,30 @@
 
 .black {
     background-color: black;
+    color: white;
 }
 
 .white {
     background-color: white;
+    color: black;
+}
+
+.outerbox {
+    position: relative;
+    float: left;
+    width: 100px;
+    height: 100px;
+    border: 1px solid black;
+    border-radius: 8px
+}
+
+.innerbox {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 3px;
+    padding: 3px;
+    font-size: x-large;
+    font-family: fantasy;
 }
