--- a/public/app/components/shakki/shakki_css.css
+++ b/public/app/components/shakki/shakki_css.css
@@ -20,8 +20,8 @@
     float: left;
     width: 100px;
     height: 100px;
+    border-radius: 8px;
     border: 1px solid black;
-    border-radius: 8px
 }
 
 .innerbox {
@@ -33,4 +33,22 @@
     padding: 3px;
     font-size: x-large;
     font-family: fantasy;
+}
+
+.messagebox {
+    float: left;
+    position: relative;
+    top: 110px;
+    left: -100px;
+    border-radius: 8px;
+    border: 1px solid black;
+}
+
+.scoreboard {
+    float: left;
+    position: relative;
+    top: 220px;
+    left: -100px;
+    border-radius: 8px;
+    border: 1px solid black;
 }
