--- a/public/styles.css
+++ b/public/styles.css
@@ -68,3 +68,35 @@
     border-radius: 8px;
     border: 1px solid black;
 }
+.flex-row {
+	display: flex;
+	flex-direction: row;
+}
+
+.flex-col {
+	display: flex;
+	flex-direction: column;
+}
+.tictactoe-container {
+	margin-left: 15px;
+}
+
+.tictactoe-board {
+	/* border: 1px solid black; */
+	margin-right: 15px;
+}
+
+.tictactoe-row {
+}
+
+.tictactoe-col {
+	/* width: 50px;
+	height: 50px;
+	border: 1px solid black; */
+}
+
+.tictactoe-square {
+	width: 50px;
+	height: 50px;
+	border: 1px solid black;
+}
