--- a/public/styles.css
+++ b/public/styles.css
@@ -68,6 +68,79 @@
     border-radius: 8px;
     border: 1px solid black;
 }
+.mod-container {
+	margin-left: 15px;
+}
+
+.mod-board {
+	/* border: 1px solid black; */
+	margin-right: 15px;
+}
+
+.mod-row {
+}
+
+.mod-col {
+	/* width: 50px;
+	height: 50px;
+	border: 1px solid black; */
+}
+
+.mod-square {
+	width: 50px;
+	height: 50px;
+	border: 1px solid black;
+}
+
+.mod-select {
+}
+
+/* mod-select-dm */
+.mod-select-dm {
+	/* width: 150px;
+	height: 400px;
+	margin-bottom: 10px;
+	border: 1px solid black; */
+}
+
+/* mod-select-dm-item */
+.mod-select-dm-item {
+	width: 150px;
+	height: 400px;
+	margin-bottom: 10px;
+	border: 1px solid black;
+}
+
+.mod-select-dm-item-portrait {
+	width: 100%;
+	height: 25%;
+}
+
+.dm-selected {
+	background-color: blue;
+}
+
+.mod-select-dm-item-stats {
+	width: 100%;
+	height: 75%;
+}
+
+/* mod-select-dungeon */
+/* .mod-select-dungeon {
+	
+} */
+
+/* mod-select-dungeon-item */
+.mod-select-dungeon-item {
+	width: 150px;
+	height: 400px;
+	margin-bottom: 10px;
+	border: 1px solid black;
+}
+
+.mod-select-dungeon-item-grid {
+	
+}
 .flex-row {
 	display: flex;
 	flex-direction: row;
@@ -76,6 +149,10 @@
 .flex-col {
 	display: flex;
 	flex-direction: column;
+}
+
+.mleft {
+	margin-left: 15px;
 }
 .tictactoe-container {
 	margin-left: 15px;
