--- a/public/app/components/mod/mod.css
+++ b/public/app/components/mod/mod.css
@@ -56,18 +56,14 @@
 }
 
 /* mod-select-dungeon */
-/* .mod-select-dungeon {
+.mod-select-dungeon {
 	
-} */
+}
 
 /* mod-select-dungeon-item */
 .mod-select-dungeon-item {
-	width: 150px;
-	height: 400px;
+	width: 100px;
+	height: 100px;
 	margin-bottom: 10px;
 	border: 1px solid black;
-}
-
-.mod-select-dungeon-item-grid {
-	
 }
