--- a/public/app/components/mod/mod.html
+++ b/public/app/components/mod/mod.html
@@ -1,5 +1,5 @@
 <div class="mod-container flex-row">
-	<mod-grid grid="grid"></mod-grid>
+	<mod-dungeon-grid grid="dungeon"></mod-dungeon-grid>
 	<mod-command class="mleft" message="message" state="state" ></mod-command>
 	<div ng-show="state === 'pickDM'" class="mleft">
 		<mod-select-dm></mod-select-dm>
@@ -7,8 +7,8 @@
 	<div ng-show="state === 'pickDungeon'" class="mleft">
 		<mod-select-dungeon></mod-select-dungeon>
 	</div>
-	<div ng-show="state === 'buildDungeon'" class="mleft>
+	<div ng-show="state === 'buildDungeon'" class="mleft">
 		<mod-build-dungeon></mod-build-dungeon>
 	</div>
-	<!-- <mod-select ng-show="state === 'pickDM'" class="mleft"></mod-select> -->
+	<mod-dm-panel class="mleft" dm="dm"></mod-dm-panel>
 </div>
