Create canvas-version of the dungeon-grid

--- a/public/app/components/mod/mod.css
+++ b/public/app/components/mod/mod.css
@@ -28,6 +28,12 @@
 	border: 1px solid black;
 }
 
+/* modDungeonGridCanvas */
+.mod-dungeon-canvas {
+	border: 1px solid black;
+}
+
+
 .mod-select {
 }
 
