--- a/public/styles.css
+++ b/public/styles.css
@@ -98,6 +98,12 @@
 	border: 1px solid black;
 }
 
+/* modDungeonGridCanvas */
+.mod-dungeon-canvas {
+	border: 1px solid black;
+}
+
+
 .mod-select {
 }
 
