--- a/public/app/components/mod/mod.html
+++ b/public/app/components/mod/mod.html
@@ -1,7 +1,7 @@
 <div class="mod-container flex-row">
 	<div class="flex-col">
-		<mod-dungeon-grid grid="dungeon"></mod-dungeon-grid>
-		<mod-dungeon-grid-canvas grid="dungeon"></mod-dungeon-grid-canvas>
+		<mod-dungeon-grid grid="dungeon.grid"></mod-dungeon-grid>
+		<mod-dungeon-grid-canvas grid="dungeon.grid"></mod-dungeon-grid-canvas>
 	</div>
 	<div class="mleft flex-col">
 		<mod-command message="message" state="state" ></mod-command>
