Refactor files (idk what is this about)

--- a/public/app/components/tictactoe/tictactoe.css
+++ b/public/app/components/tictactoe/tictactoe.css
@@ -21,3 +21,12 @@
 	height: 50px;
 	border: 1px solid black;
 }
+
+.stats-box {
+	width: 400px;
+	border: 1px solid black;
+}
+
+.mtop {
+	margin-top: 15px;
+}
