--- a/public/styles.css
+++ b/public/styles.css
@@ -21,7 +21,6 @@
 }
 
 .chess-table {
-    order: 1;
     padding-left: 50px; 
     flex: 0 0 560px; 
     /* width: 560px; */
@@ -29,7 +28,6 @@
 }
 
 .flexed-container {
-    order: 2;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -214,4 +212,13 @@
 	width: 50px;
 	height: 50px;
 	border: 1px solid black;
+}
+
+.stats-box {
+	width: 400px;
+	border: 1px solid black;
+}
+
+.mtop {
+	margin-top: 15px;
 }
